Fix site structure and alignment issues

--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,10 @@ html {
 
 section {
   background-color: #fff;
-  padding-top: 90px;
+  padding-top: 70px;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
 }
 
 section a {
@@ -25,7 +25,7 @@ h2 {
 
 p {
   text-align: justify;
-  max-width: 710px;
+  max-width: 850px;
   align-self: center;
 }
 
@@ -37,27 +37,12 @@ ul {
 
 .img-fluid {
   height: auto;
-  max-width: 150px;
+  max-width: 170px;
   width: 100%;
 }
 
-li.col-sm-3 {
-  margin: 20px 0;
-}
-
-li.col-sm-3 h4 {
-  margin: 10px;
-}
-
-#contact > p {
-  text-align: left;
-  align-items: stretch !important;
-}
-
-#contact {
-  text-align: left;
-  align-items: center;
-  padding-bottom: 90px;
+li.col-sm-4 {
+  padding: 30px 30px;
 }
 
 /*-----TOP-----*/
@@ -97,6 +82,34 @@ li.col-sm-3 h4 {
   opacity: 0.75;
 }
 
+/*-----PROJECTS-----*/
+#projects ul {
+  max-width: 850px;
+}
+
+#projects p {
+  margin-bottom: 0px;
+}
+
+/*-----CONTACT-----*/
+#contact > p {
+  align-self: auto;
+}
+
+#contact {
+  align-items: center;
+  padding-bottom: 70px;
+}
+
+form {
+  max-width: 850px !important;
+  padding: 0 !important;
+}
+
+input:focus:valid {
+  box-shadow: 0 0 5px 1px green;
+}
+
 /*-----FOOTER-----*/
 footer {
   display: flex;
@@ -128,11 +141,6 @@ footer a:hover {
   text-decoration: none;
   opacity: 1;
   color: rgba(0, 0, 0, 0.8);
-}
-
-/*-----INPUT-----*/
-input:focus:valid {
-  box-shadow: 0 0 5px 1px green;
 }
 
 /*-----SCROLL-TO-TOP-----*/
